# cann-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  README.md  entrypoint.sh  run.sh  test_env.py
docker/minimal/: Dockerfile  README.md  pyproject.toml  run.sh
docs/: README.md  changelog.md  contributing.md  kernel_bench_design_v1.0.md  kernel_bench_eval_engine_design.md  quick_start.md
docs/design/: benchmark_orchestrator_architecture.md  evaluator_design.md  kernel_eval_architecture.md  precision_comparison_design.md
docs/guide/: auto_pipeline_agent_integration.md  auto_pipeline_usage.md  contributing.md  custom_benchmark_integration.md  quick_start.md  submission_rules.md
docs/refactor/: dependency_refactor_plan.md
docs/spec/: benchmark_spec.md
examples/aclnn_launch_example/: CMakeLists.txt  build.sh  setup.py
examples/aclnn_launch_example/cann_bench/: __init__.py
examples/aclnn_launch_example/cmake/: func.cmake
examples/aclnn_launch_example/csrc/: extension.cpp
examples/aclnn_launch_example/csrc/ops/: CMakeLists.txt
examples/aclnn_launch_example/csrc/ops/_common/: aclnn_common.h
examples/aclnn_launch_example/csrc/ops/add/op_api/: aclnn_add.cpp  aclnn_add.h  add.cpp  add.h
examples/aclnn_launch_example/csrc/ops/add/op_host/: add_def.cpp  add_infershape.cpp  add_tiling.cpp
examples/aclnn_launch_example/csrc/ops/add/op_kernel/: add.h  add_kernel.cpp  add_tiling_data.h  add_tiling_key.h
examples/aclnn_launch_example/csrc/ops/add/op_plugin/: add_plugin.cpp
examples/aclnn_launch_example/csrc/ops/mish/op_api/: aclnn_mish.cpp  aclnn_mish.h  mish.cpp  mish.h
examples/aclnn_launch_example/csrc/ops/mish/op_host/: mish_def.cpp  mish_infershape.cpp  mish_tiling.cpp
examples/aclnn_launch_example/csrc/ops/mish/op_kernel/: mish.h  mish_kernel.cpp  mish_tiling_data.h  mish_tiling_key.h
examples/aclnn_launch_example/csrc/ops/mish/op_plugin/: mish_plugin.cpp
examples/aclnn_launch_example/csrc/ops/sqrt/op_api/: aclnn_sqrt.cpp  aclnn_sqrt.h  sqrt.cpp  sqrt.h
examples/aclnn_launch_example/csrc/ops/sqrt/op_host/: sqrt_def.cpp  sqrt_infershape.cpp  sqrt_tiling.cpp
examples/aclnn_launch_example/csrc/ops/sqrt/op_kernel/: sqrt.h  sqrt_kernel.cpp  sqrt_tiling_data.h  sqrt_tiling_key.h
examples/aclnn_launch_example/csrc/ops/sqrt/op_plugin/: sqrt_plugin.cpp
examples/aclnn_launch_example/scripts/: build_run.sh  build_wheel.sh
examples/direct_launch_example/: build.sh  build_and_test.sh  setup.py
examples/direct_launch_simple_example/: .gitignore  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
examples/direct_launch_simple_example/cann_bench/: __init__.py
examples/direct_launch_simple_example/cmake/: ascend.cmake  func.cmake  python.cmake
examples/direct_launch_simple_example/csrc/: CMakeLists.txt  extension.cpp
examples/direct_launch_simple_example/csrc/ops/: CMakeLists.txt
examples/direct_launch_simple_example/csrc/ops/add/: CMakeLists.txt
examples/direct_launch_simple_example/csrc/ops/add/op_kernel/: add_kernel.cpp  add_launch.h
examples/direct_launch_simple_example/csrc/ops/add/op_plugin/: add_plugin.cpp
examples/direct_launch_simple_example/csrc/ops/mish/: CMakeLists.txt
examples/direct_launch_simple_example/csrc/ops/mish/op_kernel/: mish_kernel.cpp  mish_launch.h
examples/direct_launch_simple_example/csrc/ops/mish/op_plugin/: mish_plugin.cpp
examples/direct_launch_simple_example/csrc/ops/sqrt/: CMakeLists.txt
examples/direct_launch_simple_example/csrc/ops/sqrt/op_kernel/: sqrt_kernel.cpp  sqrt_launch.h
examples/direct_launch_simple_example/csrc/ops/sqrt/op_plugin/: sqrt_plugin.cpp
examples/direct_launch_simple_example/scripts/: build_wheel.sh
examples/eval_task/: README.md
scripts/: README.md  collect_baseline.py  run_auto_pipeline.sh  run_evaluation.sh  run_test.sh
scripts/anti_cheat/: README.md  disable_builtin_kernels.sh  disable_builtin_kernels_v3.sh  restore_builtin_kernels.sh  restore_builtin_kernels_v3.sh
scripts/utils/: yaml_block_to_flow.py  yaml_to_csv.py
src/auto_pipeline/: cli.py  core.py  state.py
src/cann_bench_utils/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  setup.py  test_ops.py
src/cann_bench_utils/cann_bench_utils/: __init__.py
src/cann_bench_utils/cmake/: ascend.cmake  func.cmake  torch_npu.cmake
src/cann_bench_utils/csrc/: CMakeLists.txt  extension.cpp
src/cann_bench_utils/csrc/ops/cache_clean/op_kernel/: cache_clean_kernel.cpp  cache_clean_launch.h
src/cann_bench_utils/csrc/ops/cache_clean/op_plugin/: cache_clean_plugin.cpp
src/cann_bench_utils/csrc/ops/warmup/op_kernel/: warmup_kernel.cpp  warmup_launch.h
src/cann_bench_utils/csrc/ops/warmup/op_plugin/: warmup_plugin.cpp
src/kernel_eval/: __init__.py  cli.py  config.py  simulation.py  staged_eval.py
tasks/metadata/: 910b2.json
tests/: __init__.py  run_simple.py
tests/core/: __init__.py  case_loader.py  data_generator.py  device_runner.py  profiler_manager.py  result_recorder.py
tests/docs/: test_report.md
tests/e2e/: test_benchmark_kernel_eval_smoke.py
tests/integration/: test_benchmark_kernel_eval_smoke.py
tests/st/: known_issues.yaml  run_st.sh
tests/unit/: test_akg_agent.py  test_akg_to_cann_converter.py  test_auto_pipeline_processes.py  test_benchmark_pipeline.py  test_checker_result_dedup.py  test_compare.py  test_golden_loader.py  test_op_runner.py  test_op_runner_capture.py  test_path_resolver.py  test_perf_eval.py  test_process_pool.py  test_subprocess_runner_flags.py  test_summarize_results.py
tests/ut/: test_akg_to_cann_converter.py  test_auto_pipeline_cli.py  test_auto_pipeline_retry.py  test_auto_pipeline_state.py  test_baseline_resolver.py  test_benchmark_pipeline.py  test_cann_matcher.py  test_cases_yaml_csv_consistency.py  test_compare.py  test_dispatch_compute_guard.py  test_golden_loader.py  test_no_perf_scoring.py  test_package_manager_install.py  test_path_resolver.py  test_process_pool.py  test_pypto_case_classifier.py  test_reference_func_selection.py  test_scoring.py  test_staged_eval.py  (+1 more)
(+615 files in other folders)
